style: fix table boarder color in dark mode

--- a/themes/nicesima/assets/css/_common/_partials/post.scss
+++ b/themes/nicesima/assets/css/_common/_partials/post.scss
@@ -160,6 +160,10 @@
       td {
         padding: 5px 15px;
         border: 1px double #ebe9f5;
+
+        .dark-theme & {
+          border-color: $dark-border-color;
+        }
       }
     }
 
