--- a/themes/nicesima/assets/css/_variables/default.scss
+++ b/themes/nicesima/assets/css/_variables/default.scss
@@ -54,7 +54,7 @@ $dark-navbar-background-color: #141618;
 $dark-global-link-color: #acb1bf;
 $dark-global-link-hover-color:#fff;
 
-$dark-post-link-color: #eee;
+$dark-post-link-color: #ddd;
 $dark-post-link-hover-color:#fff;
 
 $dark-pagination-link-color : #acb1bf;
